sandc/test/fixtures/astRegression/shouldSucceed/productions/nonAssignableExpression/PrefixExpression.sand
pub class PrefixExpression {
    foo() {
        [
            !x(),
            -x(),

            !!x(),
            --x(),
            -!x(),
            !-x(),
        ]
    }
}