sandc/test/fixtures/astRegression/shouldFail/productions/type/ArrayGenericInstantiation.sand
pub class ArrayGenericInstantiation {
    foo(): T[]<A> {
        
    }
}